Added html api page.

--- a/HtmlApi.html
+++ b/HtmlApi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WattDepot Redesigned</title>
+    <title>WattDepot HTML API</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -10,9 +10,14 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
   </head>
   <body>
-    <h1>WattDepot3</h1>
+    <h1>WattDepot3 HTML API</h1>
 
-    <a href="HtmlApi.html">HTML API</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1">GET</div>
+            <div class="col-md-5">/wattdepot/health</div>
+        </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
