--- a/HtmlApi.html
+++ b/HtmlApi.html
@@ -14,8 +14,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-1">GET</div>
-            <div class="col-md-5">/wattdepot/health</div>
+            <div class="col-md-1"><span class="label label-primary">GET</span></div>
+            <div class="col-md-5"><span class="label label-info">/wattdepot/health</span></div>
         </div>
     </div>
 
