--- a/HtmlApi.html
+++ b/HtmlApi.html
@@ -15,7 +15,7 @@
 	<h1>WattDepot3 HTML API</h1>
 
 	<div class="container">
-		<div class="row">
+		<div class="row highlight">
 			<div class="col-md-1">
 				<span class="label label-primary">GET</span>
 			</div>
