--- a/HtmlApi.html
+++ b/HtmlApi.html
@@ -10,49 +10,35 @@
 <!-- Optional theme -->
 <link rel="stylesheet"
 	href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet/less" type="text/css" href="style.less">
+<script src="less-1.3.0.min.js"></script>
 </head>
 <body>
-	<h1>WattDepot3 HTML API</h1>
+	<header class="top-bar">
+		<h1>WattDepot3 HTML API</h1>
+	</header>
 
-	<div class="container">
-		<div class="row highlight">
-			<div class="col-md-1">
-				<span class="label label-primary">GET</span>
-			</div>
-			<div class="col-md-5">
-				<span class="label label-info">/wattdepot/locations</span>
-			</div>
-			<div class="col-md-6">Returns all the known locations.</div>
-		</div>
-		<div class="row">
-			<div class="col-md-1">
-				<span class="label label-primary">GET</span>
-			</div>
-			<div class="col-md-5">
-				<span class="label label-info">/wattdepot/location/{location_name}</span>
-			</div>
-			<div class="col-md-6">Returns the location with the given name.</div>
-		</div>
-		<div class="row">
-			<div class="col-md-1">
-				<span class="label label-primary">PUT</span>
-			</div>
-			<div class="col-md-5">
-				<span class="label label-info">/wattdepot/location/{location_name}</span>
-			</div>
-			<div class="col-md-6">Adds the location with the given name.</div>
-		</div>
-		<div class="row">
-			<div class="col-md-1">
-				<span class="label label-primary">DELETE</span>
-			</div>
-			<div class="col-md-5">
-				<span class="label label-info">/wattdepot/location/{location_name}</span>
-			</div>
-			<div class="col-md-6">Removes the location with the given name.</div>
-		</div>
+	<div class="sidebar">
+		<!-- put a vertical navbar -->
+            <ul class="nav nav-pills nav-stacked">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="Locations.html">Locations</a>
+                <li><a href="Sensors.html">Sensors</a>
+                <li><a href="SensorModels.html">Sensor Models</a>
+                <li><a href="SensorGroups.html">Sensor Groups</a>
+                <li><a href="WattDepositories.html">WattDepositories</a></li>
+                <li><a href="Measurements.html">Measurements</a></li>
+            </ul>
 	</div>
-
+	<div class="main">
+		<header> </header>
+		<div class="page-nav">
+			<ul>
+				<li><a href="#"></a></li>
+			</ul>
+		</div>
+		<div class="container"></div>
+	</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="//code.jquery.com/jquery.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
