--- a/Locations.html
+++ b/Locations.html
@@ -6,81 +6,89 @@
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet"
-	href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+	href="dist/css/bootstrap.min.css">
 <!-- Optional theme -->
 <link rel="stylesheet"
-	href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+	href="dist/css/bootstrap-theme.min.css">
 <link rel="stylesheet/less" type="text/css" href="style.less">
 <script src="less-1.3.0.min.js"></script>
+<style>
+</style>
 </head>
 <body>
 	<header class="top-bar">
 		<h1>WattDepot3 HTML API</h1>
 	</header>
-
-	<div class="sidebar">
-		<ul class="nav nav-pillsnav-stacked">
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="Locations.html">Locations</a>
-			<li><a href="Sensors.html">Sensors</a>
-			<li><a href="SensorModels.html">Sensor Models</a>
-			<li><a href="SensorGroups.html">Sensor Groups</a>
-			<li><a href="WattDepositories.html">WattDepositories</a></li>
-			<li><a href="Measurements.html">Measurements</a></li>
+	<div class="container">
+	  <div class="row row-offcanvas row-offcanvas-left">
+	    <div class="col-xs-6 col-sm-3 sidebar-offcanvas"
+		 id="sidebar" role="navigation">
+	      <div class="well sidebar-nav">
+		<ul class="nav nav-pills nav-stacked">
+		  <li><a href="#">Home</a></li>
+		  <li class="active"><a href="Locations.html">Locations</a>
+		  <li><a href="Sensors.html">Sensors</a>
+		  <li><a href="SensorModels.html">Sensor Models</a>
+		  <li><a href="SensorGroups.html">Sensor Groups</a>
+		  <li><a href="WattDepositories.html">WattDepositories</a></li>
+		  <li><a href="Measurements.html">Measurements</a></li>
 		</ul>
-	</div>
-	<div class="main">
-		<header> </header>
-		<div class="page-nav">
-			<ul>
-				<li><a href="#get_locations"><span class="request-type">GET</span>
-						<b><code>/wattdepot/locations</code></b> <span class="description">Get
-							a full list of the defined Locations.</span> </a></li>
-				<li><a href="#get-location"><span class="request-type">GET</span>
-						<b><code>/wattdepot/location/</code><span class="token">{location-name}</span></b>
-						<span class="description">Get the Location with the given
-							name.</span> </a></li>
-				<li><a href="#"><span class="request-type">POST</span> <b><code>/wattdepot/locations</code></b>
-						<span class="description">Create a new Location. It must
-							have a unique name.</span> </a></li>
-				<li><a href="#"><span class="request-type">DEL</span> <b><code>/wattdepot/locations/</code><span
-							class="token">{location-name}</span></b> <span class="description">Remove
-							a Location.</span> </a></li>
-			</ul>
-		</div>
-		<div class="container">
-			<section id="get_locations">
-				<header>
-					<h2>
-						<span class="big-type">GET</span>
-						<code>/wattdepot/locations</code>
-					</h2>
-				</header>
-				<div class="card-info">
-					<ul class="actions">
-						<li><a class="endpoint button"
-							onclick="$('#get_locations_response').slideToggle()"><b>Response</b></a></li>
-					</ul>
-					<code>http://server.wattdepot.org/wattdepot/locations</code>
-				</div>
-				<div class="card-info-more" id="get_locations_response">
-				    <pre>
-				        <code>
-                            <span class="p">{</span>
+	      </div>
+	    </div>
+	    <div class="col-xs-12 col-sm-9">
+	      <header> </header>
+	      <div class="page-nav">
+		<ul>
+		  <li><a href="#get_locations"><span class="request-type">GET</span>
+		      <b>/wattdepot/locations</b> <span class="description">Get
+			a full list of the defined Locations.</span> </a></li>
+		  <li><a href="#get-location"><span class="request-type">GET</span>
+		      <b>/wattdepot/location/<span class="token">{location-name}</span></b>
+		      <span class="description">Get the Location with the given
+			name.</span> </a></li>
+		  <li><a href="#"><span class="request-type">POST</span> <b>/wattdepot/locations</b>
+		      <span class="description">Create a new Location. It must
+			have a unique name.</span> </a></li>
+		  <li><a href="#"><span class="request-type">DEL</span> <b>/wattdepot/locations/<span class="token">{location-name}</span></b> <span class="description">Remove
+			a Location.</span> </a></li>
+		</ul>
+	      </div>
+	      <div class="card">
+		<section id="get_locations">
+		  <header>
+		    <h2>
+		      <span class="big-type">GET</span>
+		      /wattdepot/locations
+		    </h2>
+		  </header>
+		  <div class="card-info">
+		    http://server.wattdepot.org/wattdepot/locations <a class="btn
+			     right"
+			     onclick="$('#get_locations_response').slideToggle()"><b>Response</b></a>
+		  </div>
+		  <div class="card-info-more"
+		       id="get_locations_response" display="none">
+		    <pre>
+		      <code>
+<span class="p">{</span>
    <span class="nt">&quot;meta&quot;</span><span class="p">:</span> <span
                                                 class="p">{</span>
         <span class="nt">&quot;code&quot;</span><span class="p">:</span> <span
                                                 class="mi">200</span>
     <span class="p">},</span>
-                                <span class="p">}</span>
-				        </code>
-				    </pre>
-				</div>
-				<div class="card-description">
-				    <p>Get a full list of defined Locations.</p>
-				</div>
-			</section>
-		</div>
+<span class="p">}</span>
+		      </code>
+		    </pre>
+		  </div>
+		  <div class="card-description">
+		    <p>Get a full list of defined Locations.</p>
+		  </div>
+		</section>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="main">
 	</div>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
