Updated examples again.

--- a/Locations.html
+++ b/Locations.html
@@ -129,7 +129,7 @@
                     <section id="post_location">
                         <header>
                             <h2>
-                                <span class="big-type">PUT</span> /wattdepot/location/<span>{location_id}</span>
+                                <span class="big-type">PUT</span> /wattdepot/location/
                             </h2>
                         </header>
                         <div class="card-info">
