Updated examples again2.

--- a/Locations.html
+++ b/Locations.html
@@ -133,7 +133,7 @@
                             </h2>
                         </header>
                         <div class="card-info">
-                            curl -F '{"description":"Hale Aloha Ilima residence hall 6th floor","altitude":30,"longitude":-157.812727,"latitude":21.294642,"uniqueId":"loc1"}' http://server.wattdepot.org/wattdepot/location/ilima-6th <a
+                            curl -F '{"description":"Hale Aloha Ilima residence hall 6th floor","altitude":30,"longitude":-157.812727,"latitude":21.294642,"uniqueId":"loc1"}' http://server.wattdepot.org/wattdepot/location/ <a
                                 class="btn
                  right"
                                 onclick="$('#put_location_response').slideToggle()"><b>Response</b></a>
