Almost done with locations.

--- a/Locations.html
+++ b/Locations.html
@@ -41,14 +41,14 @@
 								<b>/wattdepot/locations</b> <span class="description">Get
 									a full list of the defined Locations.</span> </a></li>
 						<li><a href="#get-location"><span class="request-type">GET</span>
-								<b>/wattdepot/location/<span class="token">{location-name}</span></b>
+								<b>/wattdepot/location/<span class="token">{location_id}</span></b>
 								<span class="description">Get the Location with the given
 									name.</span> </a></li>
 						<li><a href="#post_location"><span class="request-type">POST</span> <b>/wattdepot/locations</b>
 								<span class="description">Create a new Location. It must
 									have a unique name.</span> </a></li>
 						<li><a href="#del_location"><span class="request-type">DEL</span> <b>/wattdepot/locations/<span
-									class="token">{location-name}</span></b> <span class="description">Remove
+									class="token">{location_id}</span></b> <span class="description">Remove
 									a Location.</span> </a></li>
 					</ul>
 				</div>
